<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wukong</string>

    <string name="sign_in">Sign In</string>
    <string name="logged_in_as_username">Logged in as %1$s.</string>
    <string name="channel">Channel</string>
    <string name="channel_id">Channel: %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_request">Permission request</string>
    <string name="permission_request_description">Wukong Music needs to r/w media files in external storage.\nOtherwise, performance and data usages may be impacted.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_preferAudioQualityData_default">high</string>
    <string name="pref_preferAudioQualityWifi_default">high</string>
    <string name="settings">Settings</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="sync_playlists">Sync</string>
    <string name="sync_playlists_result">Sync %1$d lists with %2$d songs.</string>
    <string name="sync_playlists_empty_or_error">Sync empty or error.</string>
    <string name="sync_playlists_error">Sync error: %1$s. What a shame!</string>
    <string name="sync_playlists_configuration_error">Fetch configuration failed</string>
    <string name="shuffle">Shuffle</string>
    <string name="clear">Clear</string>
    <string name="shuffle_playlist">Shuffle playlist</string>
    <string name="disconnected">Disconnected</string>
    <string name="song_play_next">Play next</string>
    <string name="song_remove">Remove</string>
    <string name="album_artwork">Album artwork</string>
    <string name="default_hint">No Lyrics</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="downvote">Down vote</string>
    <string name="flows_from_heaven_to_the_soul">Flows from heaven to the soul</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <plurals name="numberOfPlayers">
        <item quantity="one">&lt;b>%1$d&lt;/b> player</item>
        <item quantity="other">&lt;b>%1$d&lt;/b> players</item>
    </plurals>
    <string name="connecting">Connecting</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="channel_id_idle">Channel %1$s idle.</string>
    <string name="disconnect_notification">Your account is connected on another device.\nDevice: %1$s </string>
    <string name="reconnect">Reconnect</string>
    <string name="pref_title_use_media_cdn">Enable media CDN</string>
    <string name="pref_title_auto_use_local_media">Auto use local media</string>
    <string name="pref_summary_auto_use_local_media">Load local media in your external storage.</string>
    <string name="pref_title_cache_size">Cache size</string>
    <string name="pref_summary_cache_size">Maximum cache size (gigabyte)</string>
    <string name="pref_title_max_audio_quality">Preferred Maximum Audio Quality (Data)</string>
    <string name="pref_dialog_title_max_audio_quality">Preferred Maximum Audio Quality</string>
    <string name="pref_title_sync_playlists">Sync Playlists (separated by line)</string>
    <string name="pref_title_provider_cookies">Provider Cookies</string>
    <string name="pref_title_network">Network</string>
    <string name="pref_title_cache_playback"><![CDATA[Media Caching & Playback]]></string>
    <string name="pref_title_playlists">Playlists</string>
    <string name="schedule_shutdown">Schedule Shutdown</string>
    <plurals name="time_minute">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <plurals name="time_second">
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>
    <string name="schedule_shutdown_shortly">shortly</string>
    <string name="start_service_first">Please start Wukong service first.</string>
    <string name="will_schedule_shutdown_at">Wukong will exit after %1$s.</string>
    <string name="cancel_schedule_shutdown">Shutdown schedule removed.</string>
    <string name="notification_schedule_shutdown_night">Wukong just turned off. Sweet dreams!</string>
    <string name="notification_schedule_shutdown_day">Wukong just turned off. Have a nice day!</string>
</resources>
